CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/Sfrosit_t_sbsd_case_status_mode_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_sbsd_case_status_mode_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_sbsd_case_status_mode_hist</externalName>
    <label>Sfrosit$t_sbsd_case_status_mode_hist</label>
    <pluralLabel>Sfrosit$t_sbsd_case_status_mode_hist</pluralLabel>
</CustomObject>