CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/cde_eligty_contnus__c.field-meta.xml
<CustomField>
    <fullName>cde_eligty_contnus__c</fullName>
    <description>cde_eligty_contnus</description>
    <externalDeveloperName>cde_eligty_contnus</externalDeveloperName>
    <label>Cde_eligty_contnus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>