CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/cde_mode_case__c.field-meta.xml
<CustomField>
    <fullName>cde_mode_case__c</fullName>
    <description>cde_mode_case</description>
    <externalDeveloperName>cde_mode_case</externalDeveloperName>
    <label>Cde_mode_case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>