CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/cde_reason_change_mode_status__c.field-meta.xml
<CustomField>
    <fullName>cde_reason_change_mode_status__c</fullName>
    <description>cde_reason_change_mode_status</description>
    <externalDeveloperName>cde_reason_change_mode_status</externalDeveloperName>
    <label>Cde_reason_change_mode_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>