CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/dte_end_effv__c.field-meta.xml
<CustomField>
    <fullName>dte_end_effv__c</fullName>
    <description>dte_end_effv</description>
    <externalDeveloperName>dte_end_effv</externalDeveloperName>
    <label>Dte_end_effv</label>
    <type>Date</type>
</CustomField>