CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/idn_case__c.field-meta.xml
<CustomField>
    <fullName>idn_case__c</fullName>
    <description>idn_case</description>
    <externalDeveloperName>idn_case</externalDeveloperName>
    <label>Idn_case</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>