CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/idn_sbsd_case_status_mode__c.field-meta.xml
<CustomField>
    <fullName>idn_sbsd_case_status_mode__c</fullName>
    <description>idn_sbsd_case_status_mode</description>
    <externalDeveloperName>idn_sbsd_case_status_mode</externalDeveloperName>
    <label>Idn_sbsd_case_status_mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>