CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/idn_sbsd_case_status_mode_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_sbsd_case_status_mode_hist__c</fullName>
    <description>idn_sbsd_case_status_mode_hist</description>
    <externalDeveloperName>idn_sbsd_case_status_mode_hist</externalDeveloperName>
    <label>Idn_sbsd_case_status_mode_hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>