CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/idn_user_change_last__c.field-meta.xml
<CustomField>
    <fullName>idn_user_change_last__c</fullName>
    <description>idn_user_change_last</description>
    <externalDeveloperName>idn_user_change_last</externalDeveloperName>
    <label>Idn_user_change_last</label>
    <length>18</length>
    <type>Text</type>
</CustomField>