CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/ind_appln_new__c.field-meta.xml
<CustomField>
    <fullName>ind_appln_new__c</fullName>
    <description>ind_appln_new</description>
    <externalDeveloperName>ind_appln_new</externalDeveloperName>
    <label>Ind_appln_new</label>
    <length>1</length>
    <type>Text</type>
</CustomField>