CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/ind_record_delete_logcl__c.field-meta.xml
<CustomField>
    <fullName>ind_record_delete_logcl__c</fullName>
    <description>ind_record_delete_logcl</description>
    <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
    <label>Ind_record_delete_logcl</label>
    <length>1</length>
    <type>Text</type>
</CustomField>