CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/nbr_seq_hist__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_hist__c</fullName>
    <description>nbr_seq_hist</description>
    <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
    <label>Nbr_seq_hist</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>