CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_status_mode_hist__x/fields/nbr_seq_mode_status_case__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_mode_status_case__c</fullName>
    <description>nbr_seq_mode_status_case</description>
    <externalDeveloperName>nbr_seq_mode_status_case</externalDeveloperName>
    <label>Nbr_seq_mode_status_case</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>